# automation

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
k8s/: postgres-deployment.yml
scripts/: run_with_flower.py  test_priority.txt
worker/: celery.py  task.py
